# incitev

./: .gitignore  README.md  requirements.txt
ADS1115/: requirements.txt
ADS1115/src/: ems.py
ADS1263/c/: README.md  main
ADS1263/c/bcm2835-1.64/: Makefile  config.status
ADS1263/c/bcm2835-1.64/doc/: Makefile
ADS1263/c/bcm2835-1.64/src/: Makefile  test
ADS1263/c/lib/Driver/: ADS1263.c
ADS1263/python/: ADS1263.py  README.md  config.yaml  main.py
hw/: adctransmission.py
src/: config.yaml  main.py  metering.py
src/auxiliaries/ADS1115/: pyproject.toml
src/auxiliaries/ADS1263/python/: requirements.txt
src/auxiliaries/esp32/ems_lc_v1.0/: ems_lc_v1.0.ino
src/auxiliaries/esp32/ems_lc_v1.0/include/: WiFiConfig.h  constants.h  control.h  servers.h  struct_data_type.h  utils.h
src/auxiliaries/esp32/publish_adc_vals/: publish_adc_vals.ino
src/auxiliaries/python-dev/: external_controller_publish.py  subscriber_client_1.py
src/ems/ADS1115/src/: main.py
src/ems/ADS1263/c/: main
src/ems/ADS1263/python/: test.py
src/ems/c/bcm2835-1.64/: config.status
src/ems/c/examples/: main.c
src/ems/esp32/: WiFiConfig.h  publish_adc_vals.ino
src/ems/python/: ADS1263.py  config.yaml  database_query.py  main.py  single_adc_read.py
src/ems/src/c/: README.md  Readme_EN.txt  main
src/ems/src/c/bcm2835-1.64/: Makefile
src/ems/src/c/examples/: main.c
src/ems/src/python/: tests_main.py
src/local controller/ADS1115/src/: metering.py
src/local controller/ADS1263/c/: Readme_CN.txt
src/local controller/ADS1263/python/: main.py
(+7 files in other folders)
