[tool.poetry]
name = "uc4"
version = "0.1.0"
description = "nothing yet..."
authors = ["mirtaheri <h.r.mirtaheri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
